<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

    <ImageView
            android:id="@+id/basicWeatherFragment_imgv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:color/transparent"
            tools:srcCompat="@drawable/ic_01d" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_location" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_latitude" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_longitude" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_temperature" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_pressure" />

    <TextView
            android:id="@+id/basicWeatherFragment_txv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/bw_description" />

</LinearLayout>
